Fix sidebar display on smaller screen sizes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1089,6 +1089,18 @@ select {
 .top-0 {
 	top: 0px;
 }
+.top-5 {
+	top: 1.25rem;
+}
+.-top-5 {
+	top: -1.25rem;
+}
+.-top-10 {
+	top: -2.5rem;
+}
+.-top-20 {
+	top: -5rem;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1107,6 +1119,14 @@ select {
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
+}
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
+.my-5 {
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -2338,6 +2358,10 @@ select {
 		flex-direction: row;
 	}
 
+	.md\:justify-center {
+		justify-content: center;
+	}
+
 	.md\:gap-6 {
 		gap: 1.5rem;
 	}
@@ -2349,11 +2373,24 @@ select {
 	.md\:border-l {
 		border-left-width: 1px;
 	}
+
+	.md\:px-5 {
+		padding-left: 1.25rem;
+		padding-right: 1.25rem;
+	}
 }
 @media (min-width: 1024px) {
 
 	.lg\:col-span-4 {
 		grid-column: span 4 / span 4;
+	}
+
+	.lg\:m-5 {
+		margin: 1.25rem;
+	}
+
+	.lg\:ml-10 {
+		margin-left: 2.5rem;
 	}
 
 	.lg\:w-3\/4 {
@@ -2364,8 +2401,28 @@ select {
 		width: 25%;
 	}
 
+	.lg\:w-1\/3 {
+		width: 33.333333%;
+	}
+
+	.lg\:w-2\/3 {
+		width: 66.666667%;
+	}
+
 	.lg\:flex-row {
 		flex-direction: row;
+	}
+
+	.lg\:justify-center {
+		justify-content: center;
+	}
+
+	.lg\:gap-5 {
+		gap: 1.25rem;
+	}
+
+	.lg\:border-l {
+		border-left-width: 1px;
 	}
 
 	.lg\:p-8 {
@@ -2375,6 +2432,25 @@ select {
 	.lg\:px-8 {
 		padding-left: 2rem;
 		padding-right: 2rem;
+	}
+}
+@media (min-width: 1280px) {
+
+	.xl\:m-5 {
+		margin: 1.25rem;
+	}
+
+	.xl\:my-10 {
+		margin-top: 2.5rem;
+		margin-bottom: 2.5rem;
+	}
+
+	.xl\:mt-10 {
+		margin-top: 2.5rem;
+	}
+
+	.xl\:justify-center {
+		justify-content: center;
 	}
 }
 
